--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -1,10 +1,16 @@
 development:
   perform_authentication: false
+  twitter_consumer_key: consumer_key
+  twitter_consumer_secret: consumer_secret
 
 test:
   perform_authentication: false
+  twitter_consumer_key: consumer_key
+  twitter_consumer_secret: consumer_secret
 
 production:
   perform_authentication: true
   username: admin
   password: secret
+  twitter_consumer_key: consumer_key
+  twitter_consumer_secret: consumer_secret
